# texty

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  requirements.txt
src/: __init__.py
src/evaluator/: __init__.py  classify.py  evaluate.py  run.py
src/helpers/: __init__.py  dutch_stopwords.py  stopwords_combined.py  vocabulary_vectorizer.py
src/trainer/: __init__.py  export_onnx.py  generate.py  run.py
src/web/: Dockerfile  README.md  main.py  requirements.txt  run.py
src/web/html/: index.html
src/webrs/: Cargo.toml  Makefile  README.md  index.html
src/webrs/examples/: basic_usage.rs
src/webrs/src/: classifier.rs  lib.rs  onnx_parser.rs  preprocessing.rs  utils.rs
tests/evaluate/: DISCLAIMER.md  README.md  RULES.md
tests/evaluate/high_risk/biometric/: 01108973d97e4fa2.txt  0a3b18e83abd93dc.txt  0b9ef4699b6c7ed2.txt  1ce1ac92b0e44b31.txt  2921cc4730615f60.txt  463888b0653fcbd1.txt  55da99ef22674216.txt  5a228f87eacfe3f0.txt  62d2942c485a9427.txt  6d9c6437124bfab3.txt  7cd8837e6618c90c.txt  (+70 more)
vocabulary/: CLAUDE.md  DISCLAIMER.md  README.md  config.yaml
vocabulary/function/: TREE.md
vocabulary/patch/: test_patch.sh
vocabulary/patch/hr/: contextual_highrisk.txt  education_patch.txt  essential_services_patch.txt  justice_democracy_patch.txt  migration_patch.txt  work_hr_patch.txt
vocabulary/patch/lr/: content_creation_patch.txt  contextual_lowrisk.txt  customer_service_patch.txt  entertainment_patch.txt  personal_patch.txt  research_patch.txt
vocabulary/scripts/: vocabulary_stats.py
vocabulary/what/: TREE.md
(+1143 files in other folders)
