[package]
name = "texty-webrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Mathematics and arrays
ndarray = "0.15"
getrandom = { version = "0.2", features = ["js"] }

# Text processing
regex = "1.0"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.4"

# Utilities
thiserror = "1.0"
log = "0.4"

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[features]
default = ["console_error_panic_hook"]
wasm = ["wasm-bindgen-futures", "getrandom/js"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

# Development dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Profile for WASM optimization
[profile.release]
opt-level = "s"
lto = true
